# sec-scanner

./: .gitignore  README.md  TASK.md  project_context.md  pyproject.toml  report-template.html  report.html  scan_history.db  watchlist.txt
.cache/: NVDA_2026-02-25_339c9297_analysis.json  NVDA_2026-02-25_59ef1eb5.txt
sec_scanner/: analyzer.py  cache.py  cli.py  fetcher.py  history.py  reporter.py
sec_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
